<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/picsFragment"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_pics" />

    <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_login" />
</menu>